--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 .txt{
     text-align: center;
@@ -17,7 +17,7 @@
 }
 #container{
     width: 950px;
-    height: 600px;
+    height: 620px;
     background-color: #EDF6F9;
     border-radius: 3%;
 }
@@ -25,4 +25,8 @@
     display: flex;
     justify-content: center;
     color: black;
+}
+svg{
+    height: 535px;
+    width: 925px;
 }
